fix: scroll container too large

--- a/evently/src/app/pages/dashboard/whats-on/whats-on/event-dialog/event-dialog.component.scss
+++ b/evently/src/app/pages/dashboard/whats-on/whats-on/event-dialog/event-dialog.component.scss
@@ -5,8 +5,9 @@
   background-color: #f4ffff !important;
 }
 
-.event-container {
-  max-height: calc(100vh - 380px);
+.event-scroll-container {
+  padding-bottom: 100px;
+  max-height: calc(100vh - 700px);
   overflow-y: auto;
   overflow-x: hidden;
 
@@ -16,8 +17,13 @@
   overflow-y: scroll;
 }
 
-.event-container::-webkit-scrollbar {
+.event-scroll-container::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
+}
+
+.top {
+  padding-top: 30px;
+  padding-bottom: 15px;
 }
 
 .title-container {
@@ -84,7 +90,7 @@
 }
 
 .info {
-  padding: 10px 30px;
+  padding: 10px 100px;
   display: flex;
   justify-content: space-between;
 }
